--- a/main.css
+++ b/main.css
@@ -286,8 +286,13 @@ body{
     .book-list{
         padding: 10px;
         vertical-align: middle;
+        cursor: pointer;
     }
     
+    .book-list p{
+        margin-bottom: 8px;
+    }
+
     .book-list img{
         width: 35px;
         height: 50px;
@@ -633,7 +638,9 @@ body{
     cursor: pointer;
 }
 
-
+.author_name:hover{
+    color: rgb(0, 132, 255);
+}
 
 
 
@@ -662,8 +669,8 @@ body{
 }
 
 #sub-email-field:focus{
-    border-bottom: 2px solid orange;
-    transition: 0.2s;
+    box-shadow: 0px 0px 7px rgb(0, 132, 255);
+    transition: 0.4s;
 }
 
 #sub-bttn{
@@ -722,7 +729,7 @@ footer{
 }
 
 .footer-container{
-    height: 500px;
+    height: 650px;
     width: 100%;
     background-color: white;
 }
@@ -816,8 +823,6 @@ footer{
 
 
 
-
-
 .pay-method{
     display: flex;
     align-items: center;
@@ -835,7 +840,7 @@ footer{
 .rokomari-desclaimer{
     text-align: center;
     line-height: 25px;
-    padding: 15px 15px 0px 15px;
+    padding: 15px 15px 10px 15px;
 }
 
 .rokomari-copyright{
